<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.mvp.eduarda.retrofitexample.ui.details.DetailsActivity">

        <TextView
            android:id="@+id/textId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_id"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/idDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/textId"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textId" />

        <TextView
            android:id="@+id/nameDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/textName"
            app:layout_constraintTop_toBottomOf="@+id/idDetails" />

        <TextView
            android:id="@+id/textFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textName" />

        <TextView
            android:id="@+id/fullNameDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/textName"
            app:layout_constraintTop_toBottomOf="@+id/nameDetails" />

        <TextView
            android:id="@+id/textHtmlUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/html_url"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textFullName" />

        <TextView
            android:id="@+id/htmlUrlDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/textHtmlUrl"
            app:layout_constraintTop_toBottomOf="@+id/fullNameDetails" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_description"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textHtmlUrl" />

        <TextView
            android:id="@+id/descriptionDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/textDescription"
            app:layout_constraintTop_toBottomOf="@+id/htmlUrlDetails" />

        <TextView
            android:id="@+id/textUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_details"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDescription" />

        <TextView
            android:id="@+id/urlDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/textUrl"
            app:layout_constraintTop_toBottomOf="@+id/descriptionDetails" />

        <TextView
            android:id="@+id/textLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_details"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textUrl" />

        <TextView
            android:id="@+id/languageDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/textLanguage"
            app:layout_constraintTop_toBottomOf="@+id/urlDetails" />

        <TextView
            android:id="@+id/textWatchers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchers_details"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLanguage" />

        <TextView
            android:id="@+id/watchersDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/textWatchers"
            app:layout_constraintTop_toBottomOf="@+id/languageDetails" />

        <TextView
            android:id="@+id/textScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_details"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textWatchers" />

        <TextView
            android:id="@+id/scoreDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/textScore"
            app:layout_constraintTop_toBottomOf="@+id/watchersDetails" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>